Archive2/47/bccf34d7e32417/output
main.cpp:23:5: error: implicit instantiation of undefined template 'dump<const int &>'
    dump<type>{};
    ^
main.cpp:6:26: note: template is declared here
template<class T> struct dump;
                         ^
1 error generated.
